<resources>
    <string name="app_name">Park</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">name</string>
    <string name="address">address</string>
    <string name="open">开</string>
    <string name="close">关</string>

    <string name="doc"> 使用说明</string>
    <string name="help">帮助</string>
    <string name="resetbluethooth">重置手机蓝牙</string>
    <string name="searchbluethooth">扫描蓝牙设备</string>
    <string name="addpark">添加车位锁</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
