<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rootLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:visibility="gone">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_popu_addpark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:clickable="true"
                    android:src="@drawable/ic_add_white_18dp"
                    app:borderWidth="0dp"
                    app:elevation="12dp"
                    app:fabSize="normal"
                    app:pressedTranslationZ="12dp"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_more_addpark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:layout_toLeftOf="@+id/fb_popu_addpark"
                    android:padding="10dp"
                    android:paddingLeft="16dp"
                    app:backgroundTint="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/addpark"
                        android:textSize="13sp"/>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rootLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_popu_resetblu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="16dp"
                    android:clickable="true"
                    android:src="@drawable/ic_refresh_white_18dp"
                    app:borderWidth="0dp"
                    app:elevation="12dp"
                    app:fabSize="normal"
                    app:pressedTranslationZ="12dp"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_more_resetblu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:layout_toLeftOf="@+id/fb_popu_resetblu"
                    android:padding="10dp"
                    android:paddingLeft="16dp"
                    app:backgroundTint="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/resetbluethooth"
                        android:textSize="13sp"/>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rootLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_popu_findblu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:src="@drawable/ic_bluetooth_searching_white_18dp"
                    app:borderWidth="0dp"
                    app:elevation="12dp"
                    app:fabSize="normal"
                    app:pressedTranslationZ="12dp"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_more_searchblu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:layout_toLeftOf="@+id/fb_popu_findblu"
                    android:padding="10dp"
                    android:paddingLeft="16dp"
                    app:backgroundTint="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/searchbluethooth"
                        android:textSize="13sp"/>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
